# acs

./: .gitignore  Cargo.toml  LICENSE  README.md  debug_test  debug_test.rs
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: fixed_point.rs  readme.rs  test.rs  test_dogleg.rs  test_readme.rs  test_vertical.rs  vertical.rs
src/: dogleg_solver.rs  geometry.rs  lib.rs  newton_raphson_solver.rs  parameter_system.rs  parametric_dogleg_solver.rs  solver.rs
src/bindings/: geometry.rs  solver.rs  types.rs
src/constraints/: base.rs  coincident.rs  equal_radius.rs  equal_x.rs  equal_y.rs  horizontal.rs  mod.rs  parallel.rs  point_on_line.rs  vertical.rs
tests/: coincident_test.rs  equal_radius_test.rs  equal_x_test.rs  equal_y_test.rs  fixed_points.rs  horizontal_test.rs  parallel_test.rs  point_on_line_test.rs  vertical_test.rs
wasm-demo/: index.html  package-lock.json  package.json  vite.config.ts
wasm-demo/src/: App.tsx  main.ts  main.tsx  primitives.ts  style.css  types.ts
wasm-demo/src/components/: Circle2D.tsx  LICENSE  Line2D.tsx  Point2D.tsx  utils.ts
