[package]
name = "acs"
version = "0.1.0"
edition = "2024"
authors = ["Angelo Bartolome <angelo.m.bartolome@gmail.com>"]
description = "A geometric constraint solver written in Rust with WebAssembly bindings for web applications."
license = "MIT"
repository = "https://github.com/angelobartolome/acs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
